<resources>
    <string name="app_name">TasolBiometricDemo</string>
    <string name="refresh_btn">Refresh scanners</string>
    <string name="start_capture_btn">Start</string>
    <string name="stop_capture_btn">Stop</string>
    <string name="open_scanner_btn">Open</string>
    <string name="close_scanner_btn">Close</string>
    <string name="logo_img">Logo</string>
    <string name="preview_image">Preview</string>
    <string name="email_image">E-mail image</string>
    <string name="enlarge">Enlarge</string>
    <string name="device_count_name"># SCANNERS</string>
    <string name="device_count_default">n/a</string>
    <string name="status_name">NFIQ</string>
    <string name="status_default">n/a</string>
    <string name="frame_time_name">FRAME TIME</string>
    <string name="frame_time_default">n/a</string>
    <string name="usb_device_name">Devices : </string>
    <string name="capture_seq_name">Capture : </string>
    <string name="permission_warning">Need Storage Permission please</string>
    <string name="dismiss">Dismiss</string>

    <string name="invalid_untrusted_certificate">Certificat non valide / Untrusted</string>
    <string name="you_re_accessing_a_page_with_an_untrusted_or_invalid_certificate_do_you_want_to_continue">Vous avez accès à une page avec un certificat approuvé ou non valide. Voulez-vous continuer?</string>
    <string name="cancel_ssl">Annuler</string>
    <string name="continue_ssl">Continuer</string>
    <string name="label_permissions">Please enable Microphone and Storage permissions.</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="service_not_available">No geocoder available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_address_found">no address found</string>
    <string name="address_found">address found</string>
    <string name="no_location_data_provided">no location data provided</string>
    <string name="network_not_available">Network not available</string>
    <string name="generic_server_down">Server may be down please try again later.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="generic_error">Error while receiving response</string>

    <string name="connect_login_user_name">Enter User Name</string>
    <string name="connect_login_user_password">Enter User Password</string>
    <string name="connect_login_button">Login</string>
    <string name="connect_find_patient">Find Patient</string>
    <string name="connect_patients">Patients</string>

    <!--Debug Key-->
    <!--<string name="google_maps_api_key">AIzaSyAfDSee0YG6t9mBJtrkqNWRqMulFLg9iL0</string>-->

    <!--Signed Key-->
    <string name="google_maps_api_key">AIzaSyDNVQWpGd0wXbua8f7bNiNLvr_so9xjIxY</string>

    <!-- Server Error Code -->

    <!-- General String -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="action_continue">CONTINUE</string>
    <string name="action_submit">SUBMIT</string>
    <string name="action_no">NO</string>
    <string name="action_yes">YES</string>


    <!-- Custom Dialog String -->
    <string name="dialog_loading_please_wait">Please wait</string>
    <string name="dialog_title_report">Report this</string>
    <string name="report_message_hint">Report message</string>


    <!-- Registration -->
    <string name="select">Select Location</string>
    <string name="fetching_details">Fetching Stores...</string>
    <string name="no_shops_nearby">No Shops Nearby.</string>
    <string name="no_internet">No Internet Connection.</string>
    <string name="stores">Stores</string>
    <string name="hotspots">Hotspots</string>
    <string name="klabs">K-Labs</string>
    <string name="events">Events</string>
    <string name="getting_stores">Getting Stores...</string>
    <string name="connect_exit_from_app_title">Exit From App</string>
    <string name="connect_exit_from_app_message">Would you like to exit from app</string>
    <string name="connect_exit_from_app_button">Ok</string>
    <string name="map_view">MAP VIEW</string>
    <string name="list_view">List VIEW</string>
    <string name="connect_cancel_button_label">CANCEL</string>
    <string name="connect_start_dot_button_label">START DOT</string>
    <string name="connect_start_geomap_button_label">START GEOMAP</string>
    <string name="connect_patient_name">NAME</string>
    <string name="connect_patient_gender">GENDER</string>
    <string name="connect_patient_dob">DATE OF BIRTH</string>
    <string name="connect_patient_address">ADDRESS</string>
    <string name="connect_patient_details_title">Confirm patient before proceeding.</string>
    <string name="connect_patient_details_title_diagnosed">Patient is Already Diagnosed.</string>
    <string name="introduction_desc1">The objective is to map patients to better link them to quality health care and treatment services.</string>
    <string name="introduction_desc2">Any information and responses you give will be kept confidential.</string>
    <string name="introduction_surveyor">Hello,my name is SurveyorA and I am here to verify patient information.</string>
    <string name="dot_patient_Status">Patient Status</string>
    <string name="dot_attention">Attention!</string>
    <string name="dot_eov">End of visit.</string>
    <string name="dot_eov_message">Dispose sharps properly into the bin you are given and empty the bin.</string>
    <string name="dot_side_effect_status">Is patient experiencing any side effects?</string>
    <string name="dot_medication_title">Administer the following doses.</string>
    <string name="dot_previous_facility_visit_status">Please update status of previous schedule facility visit:</string>
    <string name="dot_all_adults_screened">Have all adults in the household been screened for TB ?</string>
    <string name="dot_all_children_screened">Have all children in the household been braught to the health facility to be tested for TB ?</string>
    <string name="dot_side_effect_details_status">Please tick the boxes next to side effects experienced </string>
    <string name="dot_attention_t1">Use N95 Respirator while Visiting the Patient.</string>
    <string name="dot_attention_t2">Make Sure the Patient wears a Mask.</string>
    <string name="dot_attention_t3">Follow Up on Any Previous Referrals for Side Effects.</string>
    <string name="dot_attention_t4">Follow Up on Any Previous Referrals for Contact Tracing.</string>
    <string name="intro_quest_surveyor">I am here to gather patient information on Patient A.</string>
    <string name="question_quest_surveyor">Does Patient A Currently resides here ?</string>
    <string name="patient_current_status">What is the patient\'s current status : </string>
    <string name="thankyou_intro_1">Thank you again for your participation .</string>
    <string name="thankyou_intro_2">Your patient information and responses will be kept confidential. </string>
    <string name="thankyou_intro_3">Please let me know if you have any questions or concerns. </string>
    <string name="end_of_survey">End of Survey. </string>
    <string name="survey_dialogue_title">Submit Survey</string>
    <string name="survey_dialogue_question">The survey cannot be modified after submission !</string>
    <string name="survey_dialogue_button_1">OK</string>
    <string name="survey_dialogue_button2">CANCEL</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="server_error">Server Error</string>
    <string name="login_user_name_empty_message">User Name can not be left blank.</string>
    <string name="login_user_password_empty_message">User Password can not be left blank.</string>
    <string name="login_user_name_valid_email">Please valid email address.</string>
    <string name="invalid_user_input">Invalid User Input</string>
    <string name="recording_location">Recording Location</string>
    <string name="complete_survey_message">Please complete the survey</string>
    <string name="no_connection">No Connection</string>
    <string name="status_premises">Moved to another Premises</string>
    <string name="patient_available_for_dot">Patient available for DOT</string>
    <string name="patient_dot_side_effect_yes">Yes</string>
    <string name="patient_dot_recieved_consultation">Went and recieved consultation</string>
    <string name="patient_dot_side_effect_1">Side Effect 1</string>
    <string name="patient_dot_side_effect_2">Side Effect 2</string>
    <string name="patient_dot_side_effect_other">Other</string>
    <string name="patient_dot_side_effect_no">No</string>
    <string name="patient_did_not_go">Did not go</string>
    <string name="status_cured">Cured</string>
    <string name="status_cured_treatment_completed">Cured/Treatment completed</string>
    <string name="status_deceased">Deceased</string>
    <string name="status_died">Died</string>
    <string name="status_admitted">Admitted to hospital</string>
    <string name="status_moved_to_another_area">Moved to another area</string>
    <string name="status_unknown">Unknown</string>
    <string name="status_ferrered_to_facility">Reffered back to facility</string>
    <string name="status_admitted_dot">Admitted</string>
    <string name="status_other_dot">Other</string>
    <string name="sync_server">Synchronize</string>
    <string name="sync_server_msg">Would you like to synchronize data on server ?</string>
    <string name="sync_server_oka">Ok</string>
    <string name="sync_server_cancel">Cancel</string>
    <string name="start_survey_dialogue">Please select the survey ?</string>
    <string name="start_survey_msg">Please select the survey to move further. </string>
    <string name="logged_surveyor_type">PREF_LOGGED_SURVEYOUR_TYPE</string>
    <string name="empty_message">Can not be left blank</string>
    <string name="ctb_date_format">yyyy-MM-dd</string>
    <string name="ctb_date_format_2">dd/MM/yyyy</string>
    <string name="ctb_date_format_1">dd:MM:YYYY:HH:mm:ss</string>

    <string name="action_state_default">n/a</string>
    <string name="view_database_btn">View database</string>
    <string name="user_name_text">User name</string>
    <string name="user_description_text">User description</string>
    <string name="user_details_name_text">User name</string>
    <string name="user_details_description_text">User description</string>
    <string name="user_details_create_date_text">Creation date</string>
    <string name="user_details_modify_date_text">Modify date</string>
    <string name="user_details_match_score_text">Match score</string>
    <string name="database_create_text">Created: </string>
    <string name="database_modify_text">Modified: </string>
    <string name="database_description_text">Description: </string>
    <string name="database_list_done">Done</string>
    <string name="database_list_clear">Clear database</string>
    <string name="database_list_title">Matcher database contents</string>
    <string name="database_list_size_text">Database size:</string>
</resources>
