<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:padding="@dimen/_20sdp"
        android:layout_weight="1"
        android:background="@color/connecttbswhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:layout_marginRight="@dimen/_140sdp"
            android:gravity="center"
            android:textColor="@color/primaryColorDark"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/dot_attention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/dot_attention_t1"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/connecttbsgrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/dot_attention_t2"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/connecttbsgrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/dot_attention_t3"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/connecttbsgrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/dot_attention_t4"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/connecttbsgrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
    <Button
        android:id="@+id/btnContinue"
        android:textColor="@color/white"
        android:background="@drawable/connect_green_button"
        android:text="@string/action_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
