<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:padding="@dimen/_20sdp"
        android:layout_weight="1"
        android:background="@color/connecttbswhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSurveyorIntro"
            android:textColor="@color/connecttbsgrey"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/introduction_surveyor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/connecttbsgrey"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/introduction_desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/connecttbsgrey"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/introduction_desc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <Button
        android:id="@+id/btnContinue"
        android:textColor="@color/white"
        android:background="@drawable/connect_green_button"
        android:text="@string/action_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
