<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:padding="@dimen/_20sdp"
        android:layout_weight="1"
        android:background="@color/connecttbswhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/connecttbsgrey"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_14sdp"
            android:text="@string/dot_all_children_screened"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/rgAllChildrensScreened"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:checked="true"
                android:id="@+id/rbYes"
                android:textColor="@color/primaryColorDark"
                android:text="@string/patient_dot_side_effect_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/rbNo"
                android:textColor="@color/primaryColorDark"
                android:text="@string/patient_dot_side_effect_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>

    </LinearLayout>
    <Button
        android:id="@+id/btnContinue"
        android:textColor="@color/white"
        android:background="@drawable/connect_green_button"
        android:text="@string/action_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
